--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-<!-- TRUENDO Privacy Center --><script id="truendoAutoBlock" type="text/javascript" src="https://testcdn.priv.center/pc/truendo_cmp.pid.js" data-siteid="92947643-6545-4de0-a7f2-90bcd0124f86"></script><!-- End TRUENDO Privacy Center -->
+<!-- TRUENDO Privacy Center --><script id="truendoAutoBlock" type="text/javascript" src="https://cdn.priv.center/pc/truendo_cmp.pid.js" data-siteid="92947643-6545-4de0-a7f2-90bcd0124f86"></script><!-- End TRUENDO Privacy Center -->
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-YKXPR2Y08T"></script>
 <script>
